--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "philo-sota"
+name = "philreview"
 version = "0.1.0"
 description = "Multi-agent system for generating literature reviews in philosophy"
 readme = "README.md"
